--- a/crm/templates/crm/landing.html
+++ b/crm/templates/crm/landing.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="{% static 'crm/css/landing.css' %}">
 {% endblock %}
 {% block content %}
+<!-- Ornamental Background -->
+<div class="ornament-bg"></div>
 <!-- Banner -->
 <div class="banner">
   <div class="banner-content">
@@ -20,7 +22,11 @@
 <section class="hero">
   <div class="hero-background">
     <!-- Matrix-style background -->
-    <div class="matrix-bg"></div>
+    <div class="matrix-bg">
+      <div class="matrix-dot" style="top:20%;left:12%;"></div>
+      <div class="matrix-hex" style="top:60%;left:75%" ></div>
+      <div class="matrix-dot" style="top:80%;left:45%;"></div>
+    </div>
   </div>
   <div class="hero-content">
     <h1>Гибкая система управления разработкой</h1>
